--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,15 @@
 # Prefix: <C-a>
 # Commands:
-# <prefix>	<C-r>		reload tmux.conf
-# <prefix>	|-			split pane
-#			<C-hjkl>	select pane
-# <prefix>	hjkl		resize pane
-# <prefix>	{			vim binds
-# <prefix>	c			create window
-# <prefix>	w			show windows
-# tmux new -s Session	create session
-# <prefix>	s			show sessions
+# <prefix>	r		      reload tmux.conf
+# <prefix>  S-I       install plugins 
+# <prefix>	|-		    split pane
+#			      <C-hjkl>	select pane
+# <prefix>	hjkl		  resize pane
+# <prefix>	{			    vim binds
+# <prefix>	c			    create window
+# <prefix>	w			    show windows
+# tmux new -s <name>	create session
+# <prefix>	s			    show sessions
 
 ##       ##
 # General #
@@ -38,16 +39,6 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind -
 bind - split-window -v -c "#{pane_current_path}"
-
-# Pane selection
-unbind C-h
-unbind C-j
-unbind C-k
-unbind C-l
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
 
 # Pane resize
 unbind h
@@ -89,6 +80,7 @@ set -g bell-action none
 ##       ##
 
 set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "jimeh/tmux-themepack"
 set -g @plugin "tmux-plugins/tmux-resurrect" # persists tmux sessions after restart
 set -g @plugin "tmux-plugins/tmux-continuum" # autosaves sessions every 5 mins
